--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -109,3 +109,23 @@ input {
     color: var(--gray400);
     cursor: pointer;
 }
+
+
+.imgLoading{
+    margin-top: 3px;
+    width: 25px;
+    height: 25px;
+-webkit-animation: spin 2s linear infinite;
+-moz-animation: spin 2s linear infinite;
+animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin{
+    100% {-webkit-transform: rotate(360deg);}
+}
+@-moz-keyframes spin{
+    100% {-webkit-transform: rotate(360deg);}
+}
+@keyframes spin {
+    100% {-webkit-transform: rotate(360deg);}
+}
