--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -39,6 +39,7 @@ main {
     display: flex;
     align-items: center;
     gap: 28px;
+
 }
 
 #descriptionPost {
@@ -68,4 +69,8 @@ img {
     width: 40px;
     height: 40px;
     border-radius: 50%;
+}
+
+#divmain {
+    width: 100%
 }
